--- a/epic.crm.frontend/src/assets/i18n/hu.json
+++ b/epic.crm.frontend/src/assets/i18n/hu.json
@@ -1,4 +1,7 @@
 {
+  "validation": {
+    "required": "A mező kitöltése kötelező"
+  },
   "language": {
     "english": "Angol",
     "hungarian": "Magyar"
@@ -7,7 +10,16 @@
     "add": "Hozzáadás",
     "save": "Mentés",
     "delete": "Törlés",
-    "edit": "Szerkesztés"
+    "edit": "Szerkesztés",
+    "cancel": "Kilépés",
+    "ok": "OK",
+    "addSuccessful": "Mentés sikeres",
+    "addFailed": "Mentés sikertelen",
+    "editSuccessful": "Szerkesztés sikeres",
+    "editFailed": "Szerkesztés sikertelen",
+    "deleteSuccesful": "Törlés sikeres",
+    "deleteFailed": "Törlés sikertelen",
+    "deleteQuestion": "Törli a kiválasztott rekordot?"
   },
   "login": {
     "username": "Felhasználónév",
@@ -16,18 +28,23 @@
   },
   "user": {
     "title": "Felhasználók",
-    "AppUserId": "ID",
-    "Name": "Név",
-    "Email": "Email",
-    "Profession": "Tevékenységi kör",
-    "WorkCount": "Összes Munkák száma",
-    "CustomerCount": "Összes ügyfél száma"
+    "appUserId": "ID",
+    "name": "Név",
+    "email": "Email",
+    "profession": "Tevékenységi kör",
+    "workCount": "Összes Munkák száma",
+    "customerCount": "Összes ügyfél száma",
+    "isAdmin": "Adminisztrátor ?"
   },
   "customer": {
     "title": "Ügyfelek",
     "name": "Név",
     "email": "Email",
-    "addressLiteral": "Cím"
+    "addressLiteral": "Cím",
+    "zip": "Irányítószám",
+    "city": "Város",
+    "houseAddress": "Házszám",
+    "addressInformation": "Cím információk"
   },
   "work": {
     "title": "Munkák",
