--- a/epic.crm.frontend/src/assets/i18n/en.json
+++ b/epic.crm.frontend/src/assets/i18n/en.json
@@ -19,7 +19,8 @@
     "editFailed": "Edit failed",
     "deleteSuccesful": "Delete successful",
     "deleteFailed": "Delete failed",
-    "deleteQuestion": "Do you want to delete selected record?"
+    "deleteQuestion": "Do you want to delete selected record?",
+    "search": "Search"
   },
   "login": {
     "username": "Username",
@@ -30,6 +31,7 @@
     "title": "Users",
     "appUserId": "ID",
     "name": "Name",
+    "password": "Password",
     "email": "Email",
     "profession": "Profession",
     "workCount": "Work Count",
@@ -56,5 +58,11 @@
     "addressLiteral": "Address",
     "workStatus": "Status",
     "price": "Price"
+  },
+  "workStatusEnum": {
+    "1": "Planned",
+    "2": "In Progress",
+    "3": "Done",
+    "4": "Deleted"
   }
 }
