--- a/epic.crm.frontend/src/assets/i18n/en.json
+++ b/epic.crm.frontend/src/assets/i18n/en.json
@@ -47,6 +47,7 @@
     "isAdmin": "Is admin"
   },
   "customer": {
+    "customerId": "ID",
     "title": "Customers",
     "name": "Name",
     "email": "Email",
@@ -72,5 +73,19 @@
     "2": "In Progress",
     "3": "Done",
     "4": "Deleted"
+  },
+  "error": {
+    "badRequest": "Could not connect to server: 400 - Bad request",
+    "unauthorized": "Could not connect to server: 401 - Unauthorized",
+    "forbidden": "Could not connect to server: 403 - Forbidden",
+    "notFound": "Could not connect to server: 404 - Not found",
+    "internalServerError": "Could not connect to server: 500 - Internal server error",
+    "serviceUnavailable": "Could not connect to server: 503 - Service unavailable",
+    "unspecified": "Could not connect to server: Unspecified error",
+    "clientSide": "A client-side error occurred",
+    "required": {
+      "password": "Password is required!",
+      "username": "Username is required!"
+    }
   }
 }
