--- a/epic.crm.frontend/src/assets/i18n/hu.json
+++ b/epic.crm.frontend/src/assets/i18n/hu.json
@@ -28,7 +28,18 @@
     "deleteQuestion": "Törli a kiválasztott rekordot?",
     "search": "Keresés",
     "confirmation": "Megerősítés",
-    "loggedIn": "Jelenleg be vagy jelentkezve."
+    "loggedIn": "Jelenleg be vagy jelentkezve.",
+    "error": {
+      "internal_server_error": "Szerver hiba"
+    }
+  },
+  "account": {
+    "error": {
+      "username_or_password_null": "A felhasználónév vagy a jelszó üres",
+      "wrong_username_or_password": "Rossz felhasználónév vagy jelszó",
+      "no_logged_user": "Nincs bejelentkezett felhasználó",
+      "no_user_found": "A felhasználó nem található"
+    }
   },
   "login": {
     "username": "Felhasználónév",
@@ -44,7 +55,24 @@
     "profession": "Tevékenységi kör",
     "workCount": "Összes Munkák száma",
     "customerCount": "Összes ügyfél száma",
-    "isAdmin": "Admin"
+    "isAdmin": "Admin",
+    "error": {
+      "cant_delete_loggedin_user": "A bejelentkezett felhasználó nem törölhető",
+      "invalid_form": "Érvénytelen űrlap",
+      "user_already_registered": "A felhasználó már regisztrált",
+      "invalid_email": "Érvénytelen e-mail",
+      "invalid_name": "Érvénytelen név",
+      "invalid_profession": "Érvénytelen szakma",
+      "invalid_role": "Érvénytelen szerepkör"
+    }
+  },
+  "identity": {
+    "error": {
+      "cant_add_to_role": "Nem adhat hozzá szerepkört",
+      "cant_remove_from_role": "Nem törölhet a szerepkörökből",
+      "cant_create_user": "Nem hozhat létre felhasználót",
+      "cant_delete_user": "Nem törölheti a felhasználót"
+    }
   },
   "customer": {
     "customerId": "ID",
@@ -55,7 +83,13 @@
     "zip": "Irányítószám",
     "city": "Város",
     "houseAddress": "Utca és házszám",
-    "addressInformation": "Cím információk"
+    "addressInformation": "Cím információk",
+    "error": {
+      "no_customer_found": "Az ügyfél nem található",
+      "invalid_form": "Érvénytelen űrlap",
+      "invalid_email": "Érvénytelen e-mail",
+      "invalid_name": "Érvénytelen név"
+    }
   },
   "work": {
     "title": "Munkák",
@@ -66,7 +100,12 @@
     "description": "Leírás",
     "addressLiteral": "Cím",
     "workStatus": "Státusz",
-    "price": "Ár (HUF)"
+    "price": "Ár (HUF)",
+    "error": {
+      "no_customer_found": "Az ügyfél nem található",
+      "invalid_form": "Érvénytelen űrlap",
+      "invalid_name": "Érvénytelen név"
+    }
   },
   "workStatusEnum": {
     "1": "Tervezett",
@@ -75,17 +114,8 @@
     "4": "Törölve"
   },
   "error": {
-    "badRequest": "Nem sikerült csatlakozni a szerverhez: 400 - Hibás kérés",
-    "unauthorized": "Nem sikerült csatlakozni a szerverhez: 401 - Jogosulatlan",
-    "forbidden": "Nem sikerült csatlakozni a szerverhez: 403 - Tiltott",
-    "notFound": "Nem sikerült csatlakozni a szerverhez: 404 - Nem található",
-    "internalServerError": "Nem sikerült csatlakozni a szerverhez: 500 - Belső szerverhiba",
-    "serviceUnavailable": "Nem sikerült csatlakozni a szerverhez: 503 - A szolgáltatás nem elérhető",
-    "unspecified": "Nem sikerült csatlakozni a szerverhez: Meghatározatlan hiba",
-    "clientSide": "Kliensoldali hiba történt",
-    "kötelező": {
-      "password": "Jelszó kitöltése kötelező!",
-      "username": "Felhasználónév kitöltése kötelező!"
-    }
+    "badRequest": "400 - Hibás kérés",
+    "unspecified": "Meghatározatlan hiba",
+    "clientSide": "Kliensoldali hiba történt"
   }
 }
