--- a/epic.crm.frontend/src/assets/i18n/hu.json
+++ b/epic.crm.frontend/src/assets/i18n/hu.json
@@ -23,7 +23,7 @@
     "addFailed": "Mentés sikertelen",
     "editSuccessful": "Szerkesztés sikeres",
     "editFailed": "Szerkesztés sikertelen",
-    "deleteSuccesful": "Törlés sikeres",
+    "deleteSuccessful": "Sikeres törlés",
     "deleteFailed": "Törlés sikertelen",
     "deleteQuestion": "Törli a kiválasztott rekordot?",
     "search": "Keresés",
