--- a/epic.crm.frontend/src/assets/i18n/en.json
+++ b/epic.crm.frontend/src/assets/i18n/en.json
@@ -23,7 +23,7 @@
     "addFailed": "Save failed",
     "editSuccessful": "Edit successful",
     "editFailed": "Edit failed",
-    "deleteSuccesful": "Delete successful",
+    "deleteSuccessful": "Delete successful",
     "deleteFailed": "Delete failed",
     "deleteQuestion": "Do you want to delete selected record?",
     "search": "Search",
